--- a/src/app/components/sidebar/show-all-users/show-all-users.component.scss
+++ b/src/app/components/sidebar/show-all-users/show-all-users.component.scss
@@ -33,6 +33,10 @@ section {
   max-height: 300px;
   overflow: auto;
   width: 100%;
+  p {
+    font-size: 19px;
+    font-weight: 500;
+  }
   .user {
     @include displayFlex($g: 12px);
     padding: 6px;
