--- a/src/app/components/main-chat/show-channel-member/open-send-prv-message-window/open-send-prv-message-window.component.html
+++ b/src/app/components/main-chat/show-channel-member/open-send-prv-message-window/open-send-prv-message-window.component.html
@@ -2,7 +2,7 @@
   <div class="darkBackground" (click)="closeWindow()"></div>
   @if (showProfil) {
   <!----- show prvProfil ----->
-  @for(i of talkToUser; track i){
+  @for(user of talkToUser; track user){
   <div class="whiteBox">
     <div class="boxHeader">
       <p>{{ "open-send-prv-message.profil" | translate }}</p>
@@ -10,20 +10,20 @@
         <img src="./assets/img/closeIcon.svg" class="closeIcon" />
       </div>
     </div>
-    <img src="{{ i.avatar }}" class="profileImg" />
+    <img src="{{ user.avatar }}" class="profileImg" />
     <div class="detailsBox">
       <div class="editBtnPosition">
-        <p class="name">{{ i.firstName }} {{ i.lastName }}</p>
+        <p class="name">{{ user.firstName }} {{ user.lastName }}</p>
       </div>
 
       <div class="statusBox">
         <img
           src="./assets/img/{{
-            i.status ? 'onlineRing.svg' : 'offlineRing.svg'
+            user.status ? 'onlineRing.svg' : 'offlineRing.svg'
           }}"
           class="onlineIcon"
         />
-        @if (i.status) {
+        @if (user.status) {
         <p class="fontColorGreen">
           {{ "open-send-prv-message.aktiv" | translate }}
         </p>
@@ -37,7 +37,7 @@
         <div class="email">
           <p>{{ "open-send-prv-message.address" | translate }}</p>
           <a href="mailto:wwweewefeff&#64;dede.de" target="_blank">{{
-            i.email
+            user.email
           }}</a>
         </div>
       </div>
@@ -45,7 +45,7 @@
   </div>
   } } @else {
   <!----- show channelMember ----->
-  @for(i of user; track i){
+  @for(user of users; track user){
   <div class="whiteBox">
     <div class="boxHeader">
       <p>{{ "open-send-prv-message.profil" | translate }}</p>
@@ -53,20 +53,20 @@
         <img src="./assets/img/closeIcon.svg" class="closeIcon" />
       </div>
     </div>
-    <img src="{{ i.avatar }}" class="profileImg" />
+    <img src="{{ user.avatar }}" class="profileImg" />
     <div class="detailsBox">
       <div class="editBtnPosition">
-        <p class="name">{{ i.firstName }} {{ i.lastName }}</p>
+        <p class="name">{{ user.firstName }} {{ user.lastName }}</p>
       </div>
 
       <div class="statusBox">
         <img
           src="./assets/img/{{
-            i.status ? 'onlineRing.svg' : 'offlineRing.svg'
+            user.status ? 'onlineRing.svg' : 'offlineRing.svg'
           }}"
           class="onlineIcon"
         />
-        @if (i.status) {
+        @if (user.status) {
         <p class="fontColorGreen">
           {{ "open-send-prv-message.aktiv" | translate }}
         </p>
@@ -79,11 +79,11 @@
         <img src="./assets/img/mail-icon.svg" />
         <div class="email">
           <p>E-Mail-Address</p>
-          <a href="mailto:{{ i.email }}" target="_blank">{{ i.email }}</a>
+          <a href="mailto:{{ user.email }}" target="_blank">{{ user.email }}</a>
         </div>
       </div>
     </div>
-    <button (click)="routeToUser(user)">
+    <button (click)="routeToUser(users)">
       <img src="./assets/img/messageIcon.svg" />
       {{ "open-send-prv-message.message" | translate }}
     </button>
