Fix: Changed hint text when the sidebar menu is open or closed.

--- a/src/app/components/sidebar/sidebar-toggle/sidebar-toggle.component.html
+++ b/src/app/components/sidebar/sidebar-toggle/sidebar-toggle.component.html
@@ -1,6 +1,10 @@
 <section (click)="toggleSidebar()">
   <div class="menu">
     <img src="./assets/img/sidebar/toggle.svg" alt="" />
-    <p>{{ 'sidebar-toggle.openWorkspace' | translate }}</p>
+    @if (isSidebarOpen) {
+    <p>{{ "sidebar-toggle.openWorkspace" | translate }}</p>
+    } @else {
+    <p>{{ "sidebar-toggle.closeWorkspace" | translate }}</p>
+    }
   </div>
 </section>
