Fix: Translation has been missing

--- a/src/app/components/main-chat/main-chat.component.html
+++ b/src/app/components/main-chat/main-chat.component.html
@@ -83,6 +83,7 @@
       <p>
         {{ filterUser(user.creatorId)[i].firstName }}
         {{ filterUser(user.creatorId)[i].lastName }}
+        ({{ "sidebar-direct-messages-user.you" | translate }})
       </p>
       } @else {
       <div class="imgBoxPrvChat">
