Add: Click on the logo to return to the main page

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,11 @@
       <p>Devspace</p>
     </div>
     } @else {
-    <img src="./assets/img/home-icon.svg" class="homeIcon" />
+    <img
+      src="./assets/img/home-icon.svg"
+      class="homeIcon"
+      routerLink="/main/"
+    />
     }
   </div>
   @if (viewWidth >= RESPONSIVE_THRESHOLD) {
